<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gzr7702.govquiz.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="495dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintTop_creator="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="298dp"
                android:src="@drawable/capitol"
                />

            <TextView
                android:id="@+id/header_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/header"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <!-- Question 1 -->
            <TextView
                android:id="@+id/question_one_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/question_one"
                android:textAlignment="center"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/judicial_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/judicial"/>

                    <CheckBox
                        android:id="@+id/nominal_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nominal"/>

                    <CheckBox
                        android:id="@+id/executive_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/executive"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cooperative_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cooperative"/>

                    <CheckBox
                        android:id="@+id/legislative_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/legislative"/>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <!-- Question 2 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question_two_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two"
                    android:textAlignment="center"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/question2_answer_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <!-- Question 3 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question_three_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three"
                    android:textAlignment="center"
                    android:textSize="18sp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question_three_house"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_three_answer_one"/>

                    <RadioButton
                        android:id="@+id/question_three_senate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_three_answer_two"/>
                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <!-- Question 4 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question_four_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_four"
                    android:textAlignment="center"
                    android:textSize="18sp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question_four_answer_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four_answer_one"/>

                    <RadioButton
                        android:id="@+id/question_four_answer_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four_answer_two"/>

                    <RadioButton
                        android:id="@+id/question_four_answer_three"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four_answer_three"/>
                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <!-- Question 5 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question_five_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_five"
                    android:textAlignment="center"
                    android:textSize="18sp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question_five_answer_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_five_answer_one"/>

                    <RadioButton
                        android:id="@+id/question_five_answer_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_five_answer_two"/>
                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <!-- Question 6 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question_six_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_six"
                    android:textAlignment="center"
                    android:textSize="18sp"/>


                <CheckBox
                    android:id="@+id/question_six_answer_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/question_six_answer_one"/>

                <CheckBox
                    android:id="@+id/question_six_answer_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/question_six_answer_two"/>

                <CheckBox
                    android:id="@+id/question_six_answer_three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/question_six_answer_three"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/submit_button_text"
                android:onClick="processAnswers"/>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
